check-npm-permissions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "![Logo](https://avatars1.githubusercontent.com/u/46189175?s=400&u=44752d5acd9de2cacf9ded7cdab819cd099a7213&v=4)",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js --update-readme",
+    "check-npm-permissions": "node index.js --check-npm-permissions"
   },
   "repository": {
     "type": "git",
