--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/iobroker-community-adapters/info#readme",
   "dependencies": {
-    "axios": "^0.27.2",
-    "markdown-table": "^2.0.0"
+    "axios": "^1.6.1",
+    "mustache": "^4.2.0"
   }
 }
