--- a/.github/workflows/rebuildReadme.yml
+++ b/.github/workflows/rebuildReadme.yml
@@ -30,4 +30,4 @@ jobs:
         uses: mikeal/publish-to-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: 'main'
+          BRANCH_NAME: 'master'
